--- a/public/kategori/kategori-barang.html
+++ b/public/kategori/kategori-barang.html
@@ -366,15 +366,15 @@
       <div class="cards grid sm:grid-cols-2 sm:gap-x-10 sm:mx-100 sm:ml-1 sm:mx-5 sm:p-3 md:grid-cols-2 md:ml-5 md:mr-5 lg:grid-cols-3 lg:ml-60 xl:grid-cols-4 xl:ml-60 gap-x-7">
         <div class="card sm:w-[305px] md:w-[350px] lg:w-[16rem] xl:w-[16rem] bg-biru">
           <div class="content flex-col -mt-[14px] -ml-[25px]">
-            <img src="../../img/icons/cpu.png" alt="" class="absolute w-[85px] -mt-[20px] -ml-[100px]">
+            <img src="../../img/icons/cpu.png" alt="" class="w-[85px] -mt-[10px] -ml-[50px]">
             <p class="text-white text-md absolute -mt-[80px] ml-[110px]">Produk Elektronik</p>
-            <span class="ml-[50px] mt-[7px] font-semibold text-white text-[50px]">15</span>
+            <span class="ml-[10px] mt-[7px] font-semibold text-white text-[50px]">15</span>
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
-                <span class=" text-white ml-[50px] -mt-[20px] lg:ml-0">lihat detail ></span>
-                <div class="absolute -mt-[15px] -ml-[44px] sm:-ml-[117px] md:-ml-[231px] lg:-ml-[166px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
+              <span class="show-detail md:ml-[5rem] lg:ml-[0]">
+                <span class="absolute text-white -mt-[20px]">lihat detail ></span>
+                <div class="absolute -mt-[15px] -ml-[225px] sm:-ml-[160px] md:-ml-[240px] lg:-ml-[160px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
               </span>
             </a>
           </div>
@@ -387,9 +387,9 @@
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
-                <span class=" text-white -mt-[20px]">lihat detail ></span>
-                <div class="absolute -mt-[15px] -ml-[44px] sm:-ml-[117px] md:-ml-[231px] lg:-ml-[166px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
+              <span class="show-detail md:ml-[5rem] lg:ml-[0]">
+                <span class="absolute text-white -mt-[20px]">lihat detail ></span>
+                <div class="absolute -mt-[15px] -ml-[225px] sm:-ml-[160px] md:-ml-[240px] lg:-ml-[160px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
               </span>
             </a>
           </div>
@@ -402,9 +402,9 @@
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
-                <span class=" text-white -mt-[20px]">lihat detail ></span>
-                <div class="absolute -mt-[15px] -ml-[44px] sm:-ml-[117px] md:-ml-[231px] lg:-ml-[166px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
+              <span class="show-detail md:ml-[5rem] lg:ml-[0]">
+                <span class="absolute text-white -mt-[20px]">lihat detail ></span>
+                <div class="absolute -mt-[15px] -ml-[225px] sm:-ml-[160px] md:-ml-[240px] lg:-ml-[160px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
               </span>
             </a>
           </div>
@@ -417,9 +417,9 @@
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
-                <span class=" text-white -mt-[20px]">lihat detail ></span>
-                <div class="absolute -mt-[15px] -ml-[44px] sm:-ml-[117px] md:-ml-[231px] lg:-ml-[166px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
+              <span class="show-detail md:ml-[5rem] lg:ml-[0]">
+                <span class="absolute text-white -mt-[20px]">lihat detail ></span>
+                <div class="absolute -mt-[15px] -ml-[225px] sm:-ml-[160px] md:-ml-[240px] lg:-ml-[160px] w-[380px] sm:w-[305px] md:w-[350px] lg:w-[256px] h-[35px] bg-black opacity-25 rounded-b-[15px]"></div>
               </span>
             </a>
           </div>
