--- a/public/dashboard/barangDiterima.html
+++ b/public/dashboard/barangDiterima.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700;900&family=Kaisei+Tokumin:wght@400;500;700&family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
   <!-- End G-Font -->
-  <title>Tst3</title>
+  <title>Barang Diterima</title>
   <!-- <link href="/dist/output.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
 <!--  -->
@@ -21,7 +21,7 @@
     /* font-family: 'Inter', sans-serif; */
     }
 
-    body{
+body{
   background-color: #F3E8FF;
 }
 
@@ -64,6 +64,14 @@
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 447px){
+    .title-table > .brand {
+        margin-left: 50px;
+    }
+}
+
+
 .title-table > .brand > a{
   margin-left: -.5rem;
   margin-right: 2rem;
@@ -531,6 +539,8 @@
   }
 }
 /* end of responsive */
+
+
       .side{
         align-items: center;
       }
@@ -761,12 +771,12 @@
     <div class="content">
       <div class="flex-col">
         <div class="title-table W-[500px] p-96">
-          <div class="brand">
-            <a href="#">
-              <img src="../../img/icons/kembali.png" alt="kembali" title="kembali">
-            </a>
-            <p class="font-semibold capitalize">barang masuk</p>
-          </div>
+            <div class="brand">
+              <a href="#">
+                <img src="../../img/icons/kembali.png" alt="kembali" title="kembali">
+              </a>
+              <p class="font-semibold capitalize">barang diterima</p>
+            </div>
         </div>
         <!-- end of title table -->
 
@@ -777,20 +787,26 @@
               <tr class="font-semibold">
                 <th>nama</th>
                 <th>jumlah</th>
-                <th>tanggal masuk</th>
+                <th>tanggal diterima</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>mouse</td>
                 <td>5</td>
-                <td>01/04/2023</td>
+                <td>03/03/2023</td>
               </tr>
               
               <tr>
                 <td>hedset</td>
-                <td>6</td>
-                <td>02/11/2023</td>
+                <td>7</td>
+                <td>09/10/2023</td>
+              </tr>
+
+              <tr>
+                <td>Kursi</td>
+                <td>1</td>
+                <td>11/12/2023</td>
               </tr>
             </tbody>
           </table>
@@ -808,13 +824,13 @@
     <div class="content-hidden">
       <div class="flex-col">
         <div class="title-table W-[500px] p-96">
-          <div class="brand">
-            <a href="#">
-              <img src="../../img/icons/kembali.png" alt="kembali" title="kembali">
-            </a>
-            <p class="font-semibold capitalize">barang masuk</p>
+            <div class="brand">
+              <a href="#">
+                <img src="../../img/icons/kembali.png" alt="kembali" title="kembali">
+              </a>
+              <p class="font-semibold capitalize">barang diterima</p>
+            </div>
           </div>
-        </div>
         <!-- end of title table -->
 
         <!-- tables -->
@@ -823,18 +839,21 @@
             <thead>
               <tr>
                 <th class="font-semibold">nama</th>
-                <td>meja</td>
-                <td>lemari</td>
+                <td>Mouse</td>
+                <td>Headset</td>
+                <td>Kursi</td>
               </tr>
               <tr>
                 <th class="font-semibold">jumlah</th>
-                <td>02/06/2023</td>
-                <td>02/06/2023</td>
+                <td>5</td>
+                <td>7</td>
+                <td>1</td>
               </tr>
               <tr>
                 <th class="font-semibold">tanggal masuk</th>
-                <td>02/06/2023</tzd>
-                <td>02/06/2023</tzd>
+                <td>03/03/2023</td>
+                <td>09/10/2023</td>
+                <td>11/12/2023</td>
               </tr>
             </thead>
           </table>
@@ -855,7 +874,7 @@
             <a href="#">
               <img src="../../img/icons/kembali.png" alt="kembali" title="kembali">
             </a>
-            <p class="font-semibold capitalize">barang masuk</p>
+            <p class="font-semibold capitalize">barang diterima</p>
           </div>
         </div>
         <!-- end of title table -->
