--- a/public/dashboard/barangKeluar.html
+++ b/public/dashboard/barangKeluar.html
@@ -285,6 +285,14 @@ body{
     width: 1rem;
   }
 }
+@media screen and (max-width: 251px){
+  .content-hidden > .flex-col > .title-table > .brand > a > img{
+    height: 1.3rem;
+  }
+  .content-hidden > .flex-col > .title-table > .brand > p{
+    font-size: 1em;
+  }
+}
 /* end of responsive */
 
 
