update folder javascript di halaman dist/dashboardScript

--- a/public/dashboard/barangMasuk.html
+++ b/public/dashboard/barangMasuk.html
@@ -615,6 +615,6 @@ body{
     <!-- end of tables -->
 
     <!-- END CONTENT -->
-<script src="../../dist/script.js"></script>
+<script src="../../dist/dashboardScript/script.js"></script>
 </body>
 </html>
