--- a/public/dashboard/dataSupplier.html
+++ b/public/dashboard/dataSupplier.html
@@ -863,7 +863,6 @@ body{
     <!-- end of tables -->
 
     <!-- END CONTENT -->
-
-<script src="../../dist/dataSupplier.js"></script>
+<script src="../../dist/dashboardScript/dataSupplier.js"></script>
 </body>
 </html>
