--- a/public/dashboard/barangKeluar.html
+++ b/public/dashboard/barangKeluar.html
@@ -616,6 +616,6 @@ body{
     <!-- end of tables -->
 
     <!-- END CONTENT -->
-<script src="../../dist/script.js"></script>
+<script src="../../dist/dashboardScript/script.js"></script>
 </body>
 </html>
