--- a/public/dashboard/dash.html
+++ b/public/dashboard/dash.html
@@ -338,6 +338,6 @@
     </div> -->
 
     <!-- END CONTENT -->
-<script src="../../dist/script.js"></script>
+<script src="../../dist/dashboardScript/script.js"></script>
 </body>
 </html>
